--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countdown-circle-timer": "^3.2.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.1",
